--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,7 +4,34 @@
     box-sizing: content-box;
     list-style: none;
 }
+/*:root {
+    --color-primary:  #ffffff;
+    --color-secondary: #ed4f4f;
+    --color-white: #1d1d1d;
+    --color-black: #000000;
+    --color-gray0: #d3d2d4;
+    --color-gray1: #a5a3a6;
+    --color-gray2: #7a797b;
+    --color-gray3: #5e5e5f;
+    --color-gray4: #3d3d3e;
+    --br-sm-2: 14px;
+    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+}*/
 :root {
+    --color-primary:  #ffffff;
+    --color-secondary: #ed4f4f;
+    --color-white: #1d1d1d;
+    --color-black: #000000;
+    --color-gray0: #f8f8f8;
+    --color-gray1: #6c7983;
+    --color-gray2: #6c7983;
+    --color-gray3: #6c7983;
+    --color-gray4: #454e56;
+    --br-sm-2: 14px;
+    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+}
+
+.dark-mode {
     --color-primary:  #0d022d;
     --color-secondary: #ed4f4f;
     --color-white: #ffffff;
@@ -14,9 +41,8 @@
     --color-gray2: #7a797b;
     --color-gray3: #5e5e5f;
     --color-gray4: #3d3d3e;
-    --br-sm-2: 14px;
-    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
+
 body{
     background-color: var(--color-primary);
     font-family: 'Poppins', sans-serif;
@@ -138,6 +164,46 @@ section{
     }
 }
 
+.btn-theme{
+    top: 5%;
+    right: 3%;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: var(--color-gray4);
+    cursor: pointer;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, .3);
+    transition: all .1s ease-in-out;
+    &:active{
+        transform: translateY(-4px);
+    }
+    i{
+        font-size: 1.4rem;
+        color: var(--color-gray1);
+    }
+
+    /*padding: 1rem;
+    cursor: pointer;
+    background-color: var(--color-gray3);
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: .7rem 0;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, .5);
+    i{
+        font-size: 1.2rem;
+        color: var(--color-gray1);
+        pointer-events: none;
+    }*/
+}
+
 .header-content{
     display: grid;
     grid-template-columns: 0.8fr 1.2fr;
@@ -192,7 +258,7 @@ section{
     .left-about{
         p{
             line-height: 2rem;
-            color: var(--color-gray0);
+            color: var(--color-gray1);
         }
         h4{
             text-transform: uppercase;
@@ -228,7 +294,7 @@ section{
                     position: relative;
                     text-transform: uppercase;
                     font-size: 1.2rem;
-                    color: var(--color-gray0);
+                    color: var(--color-gray1);
                     letter-spacing: 2px;
                     &::before{
                         content: '';
@@ -263,7 +329,7 @@ section{
                 display: flex;
                 align-items: center;
                 .progress-text{
-                    color: var(--color-gray0);
+                    color: var(--color-gray1);
                 }
                 .progress{
                     width: 100%;
@@ -338,7 +404,7 @@ section{
         }
         .tl-duration{
             padding: .2rem .6rem;
-            background-color: var(--color-gray4);
+            background-color: var(--color-gray0);
             border-radius: 15px;
             display: inline-block;
             font-size: .8rem;
@@ -359,6 +425,109 @@ section{
         p{
             color: var(--color-gray2);
         }
+    }
+}
+
+
+.contact-container{
+    padding: 3rem 12rem;
+    .contact-content{
+        display: flex;
+        padding-top: 3.5rem;
+        .left-contact{
+            flex: 2;
+            h4{
+                margin-left: 1rem;
+                font-size: 2rem;
+                text-transform: uppercase;
+            }
+            p{
+                margin: 1rem 0;
+                line-height: 2rem;
+
+            }
+            .contact-info{
+                .contact-item{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    p{
+                        margin: .3rem 0 !important;
+                        padding: 0 !important;
+                    }
+                    .icon{
+                        display: grid;
+                        grid-template-columns: 40px 1fr;
+                        i{
+                            display: flex;
+                            align-items: center;
+                            font-size: 1.3rem;
+                        }
+                    }
+                }
+            }
+            .contact-icon{
+                display: flex;
+                margin-top: 2rem;
+                a{
+                    display: flex;
+                    align-items: center;
+                    color: var(--color-white);
+                    background-color: var(--color-gray0);
+                    cursor: pointer;
+                    justify-content: center;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    margin: 0 .4rem;
+                    transition: all .4s ease-in-out;
+                    &:hover{
+                        background-color: var(--color-secondary);
+                        i{
+                            color: var(--color-primary);
+                        }
+                    }
+                    i{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: 1.3rem;
+                    }
+                }
+
+            }
+        }
+        .right-contact{
+            flex: 3;
+            margin: 3rem;
+            .input-control{
+                margin: 1.5rem 0;
+                input, textarea{
+                    border-radius: 30px;
+                    font-weight: inherit;
+                    font-size: inherit;
+                    font-family: inherit;
+                    padding: .8rem 1.1rem;
+                    outline: none;
+                    border: none;
+                    background-color: var(--color-gray0);
+                    width: 100%;
+                    color: var(--color-white);
+                    resize: none;
+                }
+            }
+            .input-control-multi{
+                display: flex;
+                :last-child{
+                    margin-left: 1.5rem;
+                }
+            }
+            .btn-submit{
+                display: flex;
+                justify-content: flex-start;
+            }
+        }
+
     }
 }
 
